# sparrow

./: Cargo.toml  TODO.md
src/: calendar_event.rs  data.rs  errors.rs  lib.rs  main.rs  prompts.rs  schedule.rs  spans.rs  task.rs
src/methods/: ivy_lee.rs  mod.rs  pomodoro.rs
